# ece_capstone

./: .gitignore  PARAM.json  driver_control_test.py  instruction.txt  motor_control.py  poster.pptx  retriever_core.py  stereo.py  ultrasonic_control.py  ultrasonic_led_control.py
SDK/: CMakeLists.txt
SDK/cfg/: yolo-obj.cfg
SDK/src/: cam_run.py  camtest.cpp  util.py
arduino/FastLED-master/examples/Fire2012WithPalette/: Fire2012WithPalette.ino
arduino/FastLED-master/examples/FirstLight/: FirstLight.ino
arduino/FastLED-master/examples/Multiple/ArrayOfLedArrays/: ArrayOfLedArrays.ino
arduino/led_test/: led_test.ino
arduino/motor_control/: motor_control.ino
arduino/motor_control_test/: motor_control_test.ino
arduino/sensor_and_led/: sensor_and_led.ino
arduino/step_motor_test/: step_motor_test.ino
arduino/ultrasonic_sensor_control/: ultrasonic_sensor_control.ino
arduino/ultrasonic_sensor_test/: ultrasonic_sensor_test.ino
optor_calibration/: .gitignore  Run_Fisheye_Calibration.py  Run_Thermal_Calibration.py  cam_calibration.py  extract_template.py  param.json  param_fish.json  save_calibration.py
